Update contact email in privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -116,7 +116,7 @@
             </p>
             <h3>Contact</h3>
             <p>
-              Questions? Email us at <a href="mailto:hello@Coco.app">hello@Coco.app</a>.
+              Questions? Email us at <a href="mailto:hello@the-coco-app.com">hello@the-coco-app.com</a>.
             </p>
           </div>
         </section>
