Add Google site verification meta tag to HTML head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="7I8MEHTF66SYFPzu97XtPIzWubYHWwa_YOHKOhjXIXo" />
     <title>Coco — your recipe command center</title>
     <meta name="description" content="Coco is a mobile recipe platform for discovering, creating, and organizing recipes, with smart meal plans, shopping lists, and video-to-recipe AI.">
     <link rel="stylesheet" href="styles.css">
